feature(delete):users can delete booking
	Implementation of endpoint to enable user delete their bookings.
	[Finished #167307170]
