# components/booking/validation.js
@@ -1,4 +1,5 @@
 import Trip from '../trip/model';
+import Booking from './model';
 
 /**
  * 
@@ -7,7 +8,7 @@ import Trip from '../trip/model';
  * @param {*} next 
  * @return {Void} returns nothing
  */
-const checkSeatAvailability = async (req, res, next) => {
+export const checkSeatAvailability = async (req, res, next) => {
   const { trip_id } = req.body;
   const [result] = await Trip.getTrip('id', trip_id);
   let seatNumber = req.body.seat_number;
@@ -32,6 +33,38 @@ const checkSeatAvailability = async (req, res, next) => {
     });
   }
   return next();
+};
+
+/**
+ * Function to check for seat availability
+ * @param {Object} req 
+ * @param {Object} res 
+ * @param {Object} next 
+ * @returns {Object} returns object
+ */
+export const checkBookingAvailability = async (req, res, next) => {
+  const { booking_id } = req.params || req.body;
+  const { user_id } = req.body;
+  const result = await Booking.getBooking('id', booking_id);
+
+  if (result.length > 0) {
+    const [BookingInfo] = result;
+    if (BookingInfo.user_id === user_id) {
+      return next();
+    }
+    return res.status(200).json({
+      status: 'success',
+      data: {
+        message: 'Booking does not exist for user'
+      }
+    });
+  }
+  return res.status(200).json({
+    status: 'success',
+    data: {
+      message: 'Booking Does not exist'
+    }
+  });
 };
 
 export default checkSeatAvailability;
